[tool.poetry]
name = "python-lib-demo"
version = "0.1.0"
description = ""
authors = ["Deep Bhatt <deep.bhatt@charli3.io>"]
readme = "README.md"
packages = [{include = "python_lib_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
mplfinance = "^0.12.9b7"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pylint = "^2.16.2"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
